Added Domain & Application Unit Tests
